--- a/의안정보시스템 크롤링 v2.1.ipynb
+++ b/의안정보시스템 크롤링 v2.1.ipynb
@@ -170,14 +170,14 @@
     "                reason_list.append(content)            \n",
     "                \n",
     "            except:\n",
-    "                reason_list.append([]) \n",
+    "                reason_list.append('') \n",
     "\n",
     "            ## 소관위원회를 담습니다.\n",
     "            try:\n",
     "                board = driver.find_element_by_css_selector('body > div > div.contentWrap > div.subContents > div > div:nth-child(5) > div > table > tbody > tr > td:nth-child(1)').text\n",
     "                board_list.append(board)\n",
     "            except:\n",
-    "                board_list.append([])\n",
+    "                board_list.append('')\n",
     "            \n",
     "            ## 제안자를 담습니다.\n",
     "            member_list = []    \n",
@@ -207,7 +207,7 @@
     "                driver.get_window_position(driver.window_handles[0])\n",
     "\n",
     "            except:\n",
-    "                proposer_list.append([])\n",
+    "                proposer_list.append('')\n",
     "    \n",
     "            driver.back()\n",
     "            driver.execute_script(\"window.scrollTo(0, window.scrollY + 70)\")\n",
@@ -276,7 +276,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
