--- a/의안분석_nk.ipynb
+++ b/의안분석_nk.ipynb
@@ -1036,7 +1036,7 @@
     "cond1 = bill_20th_new['제안자구분'] == '위원장'\n",
     "cond2 = bill_20th_new['소관위원회'] == '기획재정위원회'\n",
     "cond3 = (bill_20th_new['제안일자'] >= '2019-06-29') & (bill_20th_new['제안일자'] <= '2020-05-30')\n",
-    "bill_20th_new.loc[cond1 & cond2 & cond3, '제안자'] = \"['이춘석(더불어민주당/李春錫)']\""
+    "bill_20th_new.loc[cond1 & cond2 & cond3, '제안자'] = \"['이춘석(더불어민주당/李春錫)']\""
    ]
   },
   {
@@ -1970,7 +1970,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
